fixed invisible lists

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ li {
 
 ul {
     font-family: 'DM Sans', sans-serif;
-    color: white;
+    color: black;
 }
 body {
     position: relative;
@@ -312,6 +312,11 @@ span.fade {
 
 }
 
+.about-sub > .about-sub-t {
+    margin-bottom: 20px;
+
+}
+
 .about-container > p {
     grid-column-start: 1;
     grid-column-end: 4;
@@ -326,6 +331,7 @@ span.fade {
 .about-container > .about-sub {
     text-align: center;
     font-family: 'DM Sans';
+    padding: 10px;
 }
 
 .about-container > .about-sub1 {
@@ -475,189 +481,3 @@ span.fade {
     }
 
 }
-
-
-/* .main-content {
-    margin-left: 15%;
-    margin-right: 15%;
-    width: auto;
-    position:relative;
-    padding-top: 50px;
-}
-
-.main-content-about {
-    width: auto;
-    position:relative;
-    padding-top: 50px;
-    margin-left: 15%;
-    margin-right: 15%;
-}
-
-#navbar {
-    float: right;
-    height: 25px;
-    margin-right: 25px;
-    margin-top: 14px;
-}
-
-#navbar, a {
-    color: black;
-}
-
-#home-p {
-    font-size: 16px;
-    border-style: solid;
-    border-color: black;
-    padding: 5px;
-    margin-left: 25%;
-    margin-right: 25%;
-    display: block;
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-#languages {
-    text-align: center;
-    margin-bottom: 20px;
-
-}
-#intro-section {
-    text-align: center;
-}
-#title-pic {
-    border-radius: 50%;
-    border-style: solid;
-    border-width: 10px;
-    border-color: #9E768F;
-}
-.site-title {
-    position: relative;
-    float: left;
-    height: 25px;
-    margin-top: 7px;
-    margin-left: 25px;
-}
-#intro-p {
-    margin-left: 0%;
-    margin-right: 10%;
-    text-align: left;
-
-}
-
-#fav-things {
-    height: auto;
-    width: 100%;
-    margin-left: 0%;
-    margin-right: 10%;
-    text-align: center;
-    margin-bottom: 75px;
-    position: static;
-    padding: 10px;
-    border-color:  rgba(0, 0, 0, .5);
-    border-style: solid;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-#fav-things, span {
-    display: inline-block;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-#handstands, #hiking, #music {
-    height: 200px;
-    width: 350px;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-#github-div {
-    position: static;
-    margin-top: 10px;
-}
-#hobbies-div {
-    position: static;
- 
- }
- #games-div {
-    position: static;
-    text-align: center;
-    display: block;
- }
-
- #games-table {
-    margin-bottom: 50px;
- }
-
- #gametitle {
-    text-align: center;
- }
-
- form {
-    padding: 15px;
-    background-color: white;
-    font-style: italic;
-    border-style: solid;
-    font-weight: 900px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: static;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-bottom: 100px;
- }
- #form-title {
-    font-style: normal;
- }
-#youtube-video {
-    text-align: center;
-}
-
- input[type=button] {
-    color: black;
-    background-color: rgb(225, 225, 225);
-    padding: 5px;
-    margin-top: 10px;
- }
-
- input[type=button]:hover {
-    color: black;
-    background-color: cadetblue;
-    padding: 5px;
-    cursor: pointer;
-    background: #e6e6e6
- }
-#submit-button {
-    outline: none;
-    margin-top: 10px;
-    background: linear-gradient(#eee, #c0c0c09e);
-    border-radius: 15%;
-    border-style: solid;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-
- input[type=text]:focus {
-    color: black;
-    background-color: lightblue;
-    transition: 2s;
- }
- table, tr, th, td {
-    position: static;
-    width: "50%";
-    border: solid;
-    padding: 5px;
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- }
-
- td img {
-    width: 100px;
-    height: 100px;
- }
-
- .game-art {
-    width: 175px;
-    height: 260px;
-
- }
-
- table {
-    margin: auto;
- } */
